# Kredilibranza

./: README.md  index.html  package-lock.json  package.json
Backend/: .coverage  .coveragerc  .gitignore  pyproject.toml  railway.toml  requirements.txt
Backend/app/: configurations.py  main.py  usecases.py
Backend/app/adapters/: chromadb_adapter.py  document_extractors.py  mongodb_adapter.py  mongodb_user_adapter.py  openai_adapter.py
Backend/app/api/: dependencies.py  routers.py
Backend/app/api/routers/: rag_router.py
Backend/app/core/: auth.py  database.py  models.py  ports.py  schemas.py  utils.py
Backend/test/: cases_test.py
Kredilibranza FrontEnd/: Importante  package-lock.json  package.json
Kredilibranza FrontEnd/Kredilibranza/: package-lock.json  package.json
Kredilibranza FrontEnd/Kredilibranza/src/: App.css  App.js  App.jsx  api.js  index.css
Scripts/: main.js
Styles/: styles.css
public/: index.html
src/: App.js  index.js
src/Components/: Checkbox.jsx  Condiciones.jsx  Condiciones.module.css
src/Components/Shared/: Banner.jsx  Banner.module.css  Button.jsx  Footer.jsx  Footer.module.css  Input.jsx  NavBar.jsx  NavBar.module.css
src/Helpers/FileUpload/: FileUpload.jsx
src/Helpers/FloatingChatBot/: FloatingChatBot.jsx  FloatingChatBot.module.css
src/Helpers/RegistroForm/: Form.jsx  Form.module.css
src/componentes/: Banner.js  Condiciones.jsx  Contacto.jsx  FileUpload.jsx  Footer.js  Form.css  Form.jsx  Header.jsx  NavBar.css  NavBar.js  NavBar.jsx  QuienesSomos.css  RegistroForm.js  Services.js  chatbot.css  chatbot.jsx
(+48 files in other folders)
